WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101599
[Qt] API test tst_qwebinspector crashes
https://bugs.webkit.org/show_bug.cgi?id=101599
Summary
[Qt] API test tst_qwebinspector crashes
Allan Sandfeld Jensen
Reported
2012-11-08 06:49:45 PST
The test tst_qwebinspector crashes when it tries to detach an inspector that is internal only. Seems to be a compiler error, but the call-path is somewhat convoluted and cleaning it up fixes the bug.
Attachments
Patch
(5.97 KB, patch)
2012-11-08 06:56 PST
,
Allan Sandfeld Jensen
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2012-11-08 06:56:40 PST
Created
attachment 173035
[details]
Patch
Allan Sandfeld Jensen
Comment 2
2012-11-08 07:33:21 PST
Committed
r133899
: <
http://trac.webkit.org/changeset/133899
>
Jocelyn Turcotte
Comment 3
2012-11-08 07:38:02 PST
Sigh...
bug #101575
Allan Sandfeld Jensen
Comment 4
2012-11-08 07:55:09 PST
(In reply to
comment #3
)
> Sigh...
bug #101575
Ahh, great to see you figured out why the inspector reappeared after being deleted. Hopefully both patches will be useful and this is just a clean-up of the call-path then.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug