[Qt] API test tst_qwebinspector crashes https://bugs.webkit.org/show_bug.cgi?id=101599

Reviewed by Simon Hausmann.

Delete the internal inspector from QWebPage destructor, instead of causing recursions
between QWebPagePrivate::setInspector and QWebInspector::setPage.

Also separate the three tests in tst_QWebInspector to better tell which one is failing.

* Api/qwebpage.cpp:
(QWebPagePrivate::~QWebPagePrivate):
(QWebPagePrivate::setInspector):
* tests/qwebinspector/tst_qwebinspector.cpp:
(tst_QWebInspector):
(tst_QWebInspector::attachAndDestroyPageFirst):
(tst_QWebInspector::attachAndDestroyInspectorFirst):
(tst_QWebInspector::attachAndDestroyInternalInspector):

Canonical link: https://commits.webkit.org/119694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133899 268f45cc-cd09-0410-ab3c-d52691b4dbfc